--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: bot_interceptor
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+homepage: https://github.com/FightTech-VN/bot_interceptor
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
