feat(doc): publish pub.dev doc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bot_interceptor
-description: A new Flutter package project.
+description: Fighttech Flutter Bot Interceptor
 version: 0.0.1
 homepage: https://github.com/FightTech-VN/bot_interceptor
 
