--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,16 @@
 name: bot_interceptor
 description: Fighttech Flutter Bot Interceptor
-version: 0.0.6
+version: 0.0.7
 homepage: https://github.com/FightTech-VN/bot_interceptor
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
-  flutter: ">=1.17.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   dart_telegram_bot: ^0.6.1
   dio: ^4.0.6
   uuid: 3.0.6
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.1
+  lints: ^2.0.0
+  test: ^1.16.0
