--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: bot_interceptor
 description: Fighttech Flutter Bot Interceptor
-version: 0.0.8
+version: 0.0.9
 homepage: https://github.com/FightTech-VN/bot_interceptor
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-  dart_telegram_bot: ^0.6.1
+  dart_telegram_bot: ^1.0.0
   dio: ^4.0.6
-  uuid: 3.0.6
+  uuid: ^3.0.6
 
 dev_dependencies:
   lints: ^2.0.0
